Project

General

Profile

Actions

Bug #11845

closed

source_location against symbol.to_proc causes infinite loop

Bug #11845: source_location against symbol.to_proc causes infinite loop

Added by kou (Kouhei Sutou) over 10 years ago. Updated about 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.3.0dev (2015-12-19 trunk 53202) [x86_64-linux]
[ruby-core:72381]

Description

ruby -v -e ':class.to_proc.source_location' causes inifinite loop:

% /tmp/local/bin/ruby -v -e ':class.to_proc.source_location'
ruby 2.3.0dev (2015-12-19 trunk 53202) [x86_64-linux]
(never finished)

It's also caused with ruby 2.3.0preview2:

/tmp/local/bin/ruby -v -e ':class.to_proc.source_location'
ruby 2.3.0preview2 (2015-12-11 trunk 53028) [x86_64-linux]
(never finished)

This may be related to Proc#call optimization.

Updated by nobu (Nobuyoshi Nakada) over 10 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset r53206.


proc.c: fix infinite loop

  • proc.c (rb_proc_get_iseq): proc made from symbol does not have
    iseq. fix infinite loop. [ruby-core:72381] [Bug #11845]

Updated by usa (Usaku NAKAMURA) about 10 years ago Actions #2 [ruby-core:73670]

  • Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: UNKNOWN to 2.0.0: DONTNEED, 2.1: DONTNEED, 2.2: DONTNEED
Actions

Also available in: PDF Atom